# swarm-ml

./: .gitignore  Dockerfile  MANIFEST.in  pyproject.toml  requirements.txt
data/: rawinitialize_checkpoint_1.pkl  rawinitialize_checkpoint_2.pkl
doc/: project_diagrams.drawio
scripts/: WheelManager.py  encrypt_env.py  installation_utils.py  setup.py  swarm_ml_cli.sh  update_repos.sh  update_repos_template.sh
swarmml/: config.py  main.py  test.py
swarmml/configs/: base_config.py  test_config.py
swarmml/development/: db_notebook_v0.ipynb  dev_v0.py  dev_v1.py  prototype_v0.py  prototype_v1.py
swarmml/env/: .env.enc
swarmml/modules/: cli.py  databricks_utils.py  modular_ml_prototype_v0.py  titanic_model.py
tests/: test_main.py
tests/modules/: test_cli.py  test_titanic_model.py
